--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,7 @@
  */
 
 dependencies {
+    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
     implementation 'jakarta.json.bind:jakarta.json.bind-api:3.0.1'
     implementation 'org.slf4j:slf4j-api'
 
