Use new name leadingTabsToSpaces instead of now deprecated one indentWithSpaces

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2024 TweetWallFX
+ * Copyright (c) 2015-2025 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -104,14 +104,14 @@ allprojects {
                 )
 
                 trimTrailingWhitespace()
-                indentWithSpaces(4)
+                leadingTabsToSpaces(4)
                 endWithNewline()
                 replaceRegex 'noMultipleEmptyLines', '\n{3,}', '\n\n'
             }
 
             def closure = {
                 trimTrailingWhitespace()
-                indentWithSpaces(4)
+                leadingTabsToSpaces(4)
                 endWithNewline()
 //                importOrder(
 //                    '\\#',    // static imports
