Upgrade build.gradle concerning dependency-analysis plugin application

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2024 TweetWallFX
+ * Copyright (c) 2015-2025 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -180,6 +180,7 @@ allprojects {
         apply plugin: 'eclipse'
         apply plugin: 'com.netflix.nebula.info'
         apply plugin: 'maven-publish'
+        apply plugin: 'com.autonomousapps.dependency-analysis'
 
         java {
             withJavadocJar()
