Upgrade build.gradle concerning dependency-analysis plugin application (#2110)

--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,7 @@ allprojects {
         apply plugin: 'eclipse'
         apply plugin: 'com.netflix.nebula.info'
         apply plugin: 'maven-publish'
+        apply plugin: 'com.autonomousapps.dependency-analysis'
 
         java {
             withJavadocJar()
