Set JDK 25 as base and add it to the build matrix

--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -27,8 +27,9 @@ jobs:
         jdk:
           - '23'
           - '24'
+          - '25'
         distribution:
-          - 'zulu'
+          - 'temurin'
 
     env:
       JAVA_PLATFORM_VERSION: ${{ matrix.jdk }}
