Switch from junit-platform-runner to junit-platform-launcher (which was removed in JUnit v6)

--- a/build.gradle
+++ b/build.gradle
@@ -242,7 +242,7 @@ allprojects {
             testFramework 'org.mockito:mockito-junit-jupiter:5.20.0'
 
             testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-            testRuntimeOnly 'org.junit.platform:junit-platform-runner'
+            testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
             testRuntimeOnly 'org.mockito:mockito-inline:5.2.0'
         }
 
